--- a/FHSSpirit/FHSSpiritDataControl/FHSSpiritDataControl.csproj
+++ b/FHSSpirit/FHSSpiritDataControl/FHSSpiritDataControl.csproj
@@ -42,7 +42,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json.WindowsPhone">
-      <HintPath>..\..\Resources\LinqtoJSON\Bin\WindowsPhone\Newtonsoft.Json.WindowsPhone.dll</HintPath>
+      <HintPath>..\3rdParty\WindowsPhone\Newtonsoft.Json.WindowsPhone.dll</HintPath>
     </Reference>
     <Reference Include="System.Windows" />
     <Reference Include="system" />
